--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -6,10 +6,8 @@
   <body>
     <h1>Healthcare</h1>
     <h2>Doctor</h2>
-      <a href="/doctoraccount" class="button-choose pure-button">Create an Account</a>
-      <a href="/doctorlogin" class="button-choose pure-button">Login</a>
+      <a href="/doctoraccount" class="button-choose pure-button">Input Information</a>
     <h2>Patient</h2>
-      <a href="/patientaccount" class="button-choose pure-button">Create an Account</a>
-      <a href="/patientlogin" class="button-choose pure-button">Login</a>
+      <a href="/patientaccount" class="button-choose pure-button">Input Information</a>
   </body>
 </hmtl>
