--- a/templates/doctoraccount.html
+++ b/templates/doctoraccount.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link type="text/css" rel="stylesheet" href="/static/css/doctoraccount.css">
     <title>Healthcare</title>
   </head>
   <body>
-    <h1>Information Form</h1>
+    <h1>INFORMATION FORM</h1>
     <form method="post">
       Name:<br>
       <input type="text" name="name" required>
@@ -13,7 +14,7 @@
       <input type="text" name="language" required>
       <br><br>
       Location:<br>
-      <input type="text" name="location" required>
+      <input type="text" name="location" required><br>
       <input type="submit" value="Submit" required>
     </form>
   </body>
