--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link type="text/css" rel="stylesheet" href="/static/css/homepage.css">
     <title>Healthcare</title>
   </head>
   <body>
-    <h1>Healthcare</h1>
-    <h2>Doctor</h2>
-      <a href="/doctoraccount" class="button-choose pure-button">Input Information</a>
-    <h2>Patient</h2>
-      <a href="/patientaccount" class="button-choose pure-button">Input Information</a>
+    <h1> HEALTHCARE</h1>
+    <h2><a href="/doctoraccount">DOCTOR</h2>
+      <a href="/doctoraccount" class="button-choose pure-button"></a>
+    <h2><a href="/patientaccount">PATIENT</h2>
+      <a href="/patientaccount" class="button-choose pure-button"></a>
   </body>
 </hmtl>
