--- a/templates/patientaccount.html
+++ b/templates/patientaccount.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link type="text/css" rel="stylesheet" href="/static/css/patientaccount.css">
     <title>Healthcare</title>
   </head>
   <body>
-    <h1>Information Form</h1>
+    <h1>INFORMATION FORM</h1>
     <form method="post">
       Name:<br>
       <input type="text" name="name1" required>
@@ -19,5 +20,7 @@
       <br><br>
       <a href="/results" class="button-choose pure-button">Submit</a>
     </form>
+
+  
   </body>
 </html>
